# authpp

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  authpp.cbp  main.cpp
.github/workflows/: cmake.yml
apps/: CMakeLists.txt  main.cc  main.cpp
apps/cli/: CMakeLists.txt  main.cpp
apps/gtkmm/: CMakeLists.txt  account_widget.cpp  account_widget.h  main.cpp  main_window.cpp  main_window.h
apps/gtkmm/data/: org.adamve.authppgtk.desktop.in  org.adamve.authppgtk.gresource.xml
apps/gtkmm/data/css/: style.css
apps/gtkmm/data/ui/: account_widget.ui  authppgtk.cmb  authppgtk.ui
apps/gtkmm/include/: account_holder.h  app_window.h  application.h  gtk_app.h  main_window.h  resources.h  timer.h  timer_widget.h  version.h.in  worker.h
apps/gtkmm/resources/ui/: account_widget.ui  authppgtk.cmb  authppgtk.css  authppgtk.ui
apps/gtkmm/src/: account_holder.cpp  app_window.cpp  application.cpp  gtk_app.cpp  main.cpp  main_window.cpp  resources.cpp  timer.cpp  timer_widget.cpp  worker.cpp
authpp_lib/: CMakeLists.txt
authpp_lib/include/: apdu.h  byte_buffer.h  logger.h  message.h  oath_session.h  oath_session_helper.h  usb_device.h
authpp_lib/include/fmt/: fmt_byte_buffer.h  fmt_logger.h  fmt_oath.h
authpp_lib/include/libauthpp/: apdu.h  byte_buffer.h  ccid_connection.h  logger.h  message.h  oath_name_parser.h  oath_name_parser.tpp  oath_session.h  oath_session_helper.h  time_util.h  usb_device.h  usb_manager.h  util.h
authpp_lib/include/libauthpp/fmt/: fmt_byte_buffer.h  fmt_logger.h  fmt_message.h  fmt_oath.h
authpp_lib/src/: apdu.cpp  byte_buffer.cpp  ccid_connection.cpp  message.cpp  oath_session.cpp  oath_session_helper.cpp  time_util.cpp  usb_device.cpp  usb_manager.cpp  util.cpp
authpp_lib/tests/: CMakeLists.txt  oath_name_parser_test.cpp
ci/ubuntu-23.04/: Dockerfile
common/: CMakeLists.txt
common/include/common/: arg_parser.h
common/src/common/: arg_parser.cpp
include/: Apdu.h  ByteArray.h  CcidConnection.h  Formatters.h  Logger.h  Message.h  OathSession.h  UsbDevice.h  UsbDeviceHandle.h  Util.h  apdu.h  byte_array.h  byte_buffer.h  bytes.h  ccid_connection.h  formatters.h  logger.h  message.h  oath_session.h  usb_device.h  usb_manager.h  util.h
include/fmt/: fmt_byte_array.h  fmt_byte_buffer.h  fmt_bytes.h  fmt_logger.h  fmt_message.h  fmt_oath.h  fmt_oath_version.h
scripts/: clang-format.sh  cppcheck.sh
src/: Apdu.cc  Apdu.hpp  CMakeLists.txt  CcidConnection.cpp  Logger.cpp  Message.cc  Message.cpp  OathSession.cc  OathSession.cpp  UsbConnection.cpp  UsbDevice.cpp  UsbDeviceHandle.cpp  Util.cc  Util.cpp  apdu.cc  apdu.cpp  byte_buffer.cc  byte_buffer.cpp  bytes.cc  ccid_connection.cc  ccid_connection.cpp  main.cc  main.cpp  message.cc  message.cpp  oath_session.cc  oath_session.cpp  usb_device.cc  usb_device.cpp  usb_manager.cpp  util.cc  util.cpp
tests/: CMakeLists.txt  byte_buffer_test.cc  byte_buffer_test.cpp  bytes_test.cc
